--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,15 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+**/*
+!www
+www/*
+!www/assets
+!www/assets/*
+!www/assets/css/*
+!www/assets/scripts
+!www/assets/scripts/*
+!www/assets/scripts/javascript/*
+!www/src
+!www/src/*
+!www/src/css/*
+!www/src/scripts
+!www/src/scripts/*
+!www/src/scripts/javascript/*
