--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
 **/*
 !www
-www/*
-!www/assets
+!www/*
 !www/assets/*
-!www/assets/css/*
-!www/assets/scripts
-!www/assets/scripts/*
-!www/assets/scripts/javascript/*
-!www/src
+!www/assets/css/**
+!www/assets/js/**
 !www/src/*
-!www/src/css/*
-!www/src/scripts
-!www/src/scripts/*
-!www/src/scripts/javascript/*
+!www/src/css/**
+!www/src/js/**
